# exercism_answers

./: .gitignore
haskell/: Exercism.cabal
haskell/anagram/: Anagram.hs
haskell/bob/: Bob.hs
haskell/etl/: etl.cabal  etl.hs
haskell/gigasecond/: Gigasecond.hs
haskell/grade-school/: School.hs  School_AbuseList.hs  School_AbuseList1.hs  grade-school.cabal
haskell/grains/: Grains.hs
haskell/leap/: LeapYear.hs
haskell/list-ops/: ListOps.hs  list-ops.cabal
haskell/nucleotide-count/: DNA.hs  nucleotide-count.cabal
haskell/phone-number/: Phone.hs  phone-number.cabal
haskell/point-mutations/: DNA.hs
haskell/rna-transcription/: Dna.hs
haskell/robot-name/: Robot.hs  robotname.cabal
haskell/simple-linked-list/: LinkedList.hs  simple-linked-list.cabal
haskell/space-age/: SpaceAge.hs  testinput.hs
haskell/strain/: Strain.hs
haskell/sublist/: Sublist.hs
haskell/sum-of-multiples/: SumOfMultiples.hs
haskell/thunk-leak/: main.hs
haskell/word-count/: WordCount.cabal  WordCount.hs
scala/bob/src/main/scala/: Bob.scala
scala/hello-world/src/main/scala/: HelloWorld.scala
